--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -1,5 +1,13 @@
 @import url("pygments.css");
 
+/* Fix code block font sizes */
+/* https://stackoverflow.com/a/34284777 */
+@media screen and (max-device-width: 480px){
+  body{
+    -webkit-text-size-adjust: 100%;
+  }
+}
+
 body {
     color: rgb(50, 50, 50);
     margin: 0 auto;
